# debati

./: .gitignore  Dockerfile  README.md  book_index_builder.py  book_qa.py  commands.py  example.py  git_index_builder.py  git_qa.py  index_builder.py  main.py  pyproject.toml  register.py  search_qa.py  streamlit_admin_app.py  streamlit_app.py  streamlit_chat.py  test_config.py  upload_companion.py  web_qa.py
.github/workflows/: continuous-integration.yml  deploy.yml
charts/bot/: Chart.yaml  values.yaml
charts/bot/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml
commands/: ask.py
config/: app_config.py  streamlit_config.py
examples/: ask_book.json  ask_web.json  ask_web2.json  ask_web3.json  ask_web_raw_text.json  ask_web_single_script_frame.json
qa/: book_index_builder.py  book_qa.py  git_index_builder.py  git_qa.py  index_builder.py  search_qa.py  serp_loader.py  utils.py  web_qa.py
tests/: test_chatbot_events.py  test_config.py  test_message_utils.py  test_streamlit_chatbot.py  test_upload_companion.py
utils/: logging_utils.py  message_utils.py
