[tool.poetry]
name = "peter"
version = "0.1.0"
description = ""
authors = ["Youngwook Kim <youngwook.kim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.6"
langchain = {extras = ["llms"], version = "^0.0.223"}
chromadb = "^0.3.26"
gitpython = "^3.1.31"
pinecone-client = "^2.2.2"
tiktoken = "^0.4.0"
pypdf = "^3.12.1"
google-search-results = "^2.4.2"
pydantic = "^1.10.11"
beautifulsoup4 = "^4.12.2"
playwright = "^1.36.0"
lxml = "^4.9.3"
unstructured = "^0.8.1"
slack-bolt = "^1.18.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
mypy = "^1.4.1"
pyright = "^1.1.316"
isort = "^5.12.0"
omgpt = "0.0.7"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
